// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.grpcmap";
option java_outer_classname = "GrpcMapProto";

package grpcmap;

service Map {
  rpc InsertZoneFromGeo (InsertZoneFromGeoRequest) returns (InsertReply) {}
  rpc InsertZoneFromH3 (InsertZoneFromH3Request) returns (InsertReply) {}
  rpc GetZoneFromGeo (GetZoneFromGeoRequest) returns (GetReply) {}
  rpc GetZoneFromH3 (GetZoneFromH3Request) returns (GetReply) {}
}

message InsertReply {
  bool ok = 1;
}

message GetReply {
  bool found = 1;
  string zone_name = 2;
}

message GeoCoord {
  float lat = 1;
  float lon = 2;
}

message GetZoneFromGeoRequest {
  GeoCoord geolocation = 1;
}

message GetZoneFromH3Request {
  int64 h3_index = 2;
}


message InsertZoneFromGeoRequest {
  string zone_name = 1;
  repeated GeoCoord geolocations = 2;
}

message InsertZoneFromH3Request {
  string zone_name = 1;
  int64 h3_index = 2;
}
